--- a/frontend/contracts/com_login.html
+++ b/frontend/contracts/com_login.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="page-background">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a href="com_login.html">
@@ -56,6 +56,7 @@
                         </button>
                     </div>
                 </div>
+                <h1 style="text-align:center;margin-top:30px;color:rgb(4, 93, 4)">Available Contracts</h1>
                 <div id="contract-grid" class="grid"></div>
             </div>
         </div>
