--- a/frontend/contracts/farmers.html
+++ b/frontend/contracts/farmers.html
@@ -53,9 +53,23 @@
         .content-area {
             flex: 1;
         }
+        .page-background::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(../sachivalayam/homebg.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        opacity: 0.8; /* Adjust the opacity as needed */
+        z-index: -1; /* Ensure the pseudo-element is behind the content */
+    }
     </style>
 </head>
-<body>
+<body class="page-background">
     <!-- <header class="p-3 text-bg-dark d-flex">
         <div class="container-fluid header-container">
             <div class="d-flex flex-wrap align-items-center"></div>
