--- a/frontend/contracts/notifications.html
+++ b/frontend/contracts/notifications.html
@@ -15,7 +15,7 @@
         }
     </style>
 </head>
-<body>
+<body class="page-background">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a href="com_login.html">
