--- a/frontend/contracts/sachivalayams.html
+++ b/frontend/contracts/sachivalayams.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="page-background">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a href="com_login.html">
