--- a/frontend/sachivalayam/home_telugu.html
+++ b/frontend/sachivalayam/home_telugu.html
@@ -13,7 +13,7 @@
             <a href="home.html">
                 <img class="logo-container" src="logo.jpg" alt="logo">
             </a>
-            <h6 style="color: white">VISWAAS BANDHAN</h6>
+            <h6 style="color: white">విశ్వాస్ బందన్</h6>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="ml-auto d-flex align-items-center">
                     <!-- Translation Icon -->
@@ -23,13 +23,14 @@
                             <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995q.289.451.63.846c-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6 6 0 0 1-.415-.492 2 2 0 0 1-.94.31"/>
                           </svg>
                           <ul class="language-list">
-                            <li onclick="location.href='home_hindi.html'">Hindi</li>
-                            <li>Tamil</li>
-                            <li onclick="location.href='home_telugu.html'">Telugu</li>
+                            <li>హిందీ</li>
+                            <li>తమిళం</li>
+                            <li>తెలుగు</li>
                           </ul>
                     </div>
                     <a href="notifications.html" class="notification-link">
                         <div class="d-flex align-items-center">
+                            
                             <!-- Notifications Icon -->
                             <div class="notification-icon mr-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
@@ -51,17 +52,17 @@
 
     <div class="sachivalayam-home-contents">
         <div class="container mt-5 pt-5">
-            <h1 class="text-center display-4 mb-4">Welcome to Viswaas Bandhan</h1>
-            <p class="lead text-center mb-5">Your one-stop portal for all farming services</p>
+            <h1 class="text-center display-4 mb-4">విశ్వాస్ బందన్</h1>
+            <p class="lead text-center mb-5">అన్ని వ్యవసాయ సేవలకు మీ వన్-స్టాప్ పోర్టల్</p>
             <div class="row text-center">
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="notifications.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">Notifications</a>
+                    <a href="notifications.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">నోటిఫికేషన్లు</a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="farmers_details.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">Farmers Dashboard</a>
+                    <a href="farmers_details.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">రైతుల వివరాలు</a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="newRegistration.html" class="btn btn-warning btn-lg btn-block rounded-pill shadow">New Registration</a>
+                    <a href="newRegistration.html" class="btn btn-warning btn-lg btn-block rounded-pill shadow">కొత్త నమోదు</a>
                 </div>
             </div>
         </div>
