--- a/frontend/sachivalayam/home.html
+++ b/frontend/sachivalayam/home.html
@@ -49,19 +49,19 @@
         </div>
     </nav>
 
-    <div class="sachivalayam-home-contents">
+    <div style="margin-top:20px;" class="sachivalayam-home-contents">
         <div class="container mt-5 pt-5">
-            <h1 class="text-center display-4 mb-4">Welcome to Viswaas Bandhan</h1>
+            <h1 style="padding-top:80px"class="text-center display-4 mb-4">Welcome to Viswaas Bandhan</h1>
             <p class="lead text-center mb-5">Your one-stop portal for all farming services</p>
             <div class="row text-center">
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="notifications.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">Notifications</a>
+                    <a href="farmers_details.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">Farmers Dashboard</a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="farmers_details.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">Farmers Dashboard</a>
+                    <a href="newRegistration.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">New Registration</a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="newRegistration.html" class="btn btn-warning btn-lg btn-block rounded-pill shadow">New Registration</a>
+                    <a href="" class="btn btn-warning btn-lg btn-block rounded-pill shadow">Contract Form</a>
                 </div>
             </div>
         </div>
