--- a/frontend/contracts/com_login.html
+++ b/frontend/contracts/com_login.html
@@ -49,7 +49,7 @@
         <div class="d-flex">
             <div class="content-area">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <input type="text" class="form-control search-bar" placeholder="Search...">
+                    <input type="text" style="width:50%;padding:20px" class="form-control search-bar" placeholder="Search...">
                     <div class="d-flex">
                         <button style="margin-top:50px;" class="btn btn-primary new-cont ms-3">
                             Sachivalayams
@@ -64,5 +64,9 @@
     <script src="con_fetch.js"></script>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
