--- a/frontend/sachivalayam/home_telugu.html
+++ b/frontend/sachivalayam/home_telugu.html
@@ -61,7 +61,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <a href="farmers_details.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">రైతుల వివరాలు</a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4"></div>
+                <div class="col-lg-4 col-md-6 mb-4">
                 <a href="newRegistration.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">కొత్త నమోదు</a>
                 </div>
             </div>
